--- a/index.html
+++ b/index.html
@@ -42,21 +42,15 @@
             <a class="item">Add a business</a>
             <div class="right menu">
                 <div class="item">
-                    <a class="ui button">Log in</a>
+                    <a class="ui button" href="./login.html">Log in</a>
                 </div>
                 <div class="item">
-                    <a class="ui primary button">Sign Up</a>
+                    <a class="ui primary button" href="./registration.html">Sign Up</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Sidebar Menu -->
-    <div class="ui vertical inverted sidebar menu">
-        <a class="active item">Home</a>
-        <a class="item">Add a Business</a>
-        <a class="item">Categories</a>
-    </div>
     <div id="home" class="pusher">
         <div class="ui inverted vertical masthead center aligned segment">
             <div class="ui text container">
