--- a/item.html
+++ b/item.html
@@ -64,10 +64,10 @@
             </a>
             <div class="right menu">
                 <div class="item">
-                    <a class="ui button">Log in</a>
+                    <a class="ui button" href="./login.html">Log in</a>
                 </div>
                 <div class="item">
-                    <a class="ui primary button">Sign Up</a>
+                    <a class="ui primary button" href="./registration.html">Sign Up</a>
                 </div>
             </div>
         </div>
